# SLAE

CG CGS BiCG/: 1.py  Bicg_times.csv  CG_times.csv
CG CGS BiCG/include/: methods.h
CG CGS BiCG/src/: main.cpp  methods.cpp
CG CGS BiCG/tests/: test.cpp
ChebyshevAcc/: 1.py
ChebyshevAcc/include/: methods.h
ChebyshevAcc/src/: main.cpp  methods.cpp
ChebyshevAcc/tests/: test.cpp
Chebyshov/: 1.py  CMakeLists.txt
Chebyshov/include/: Chebyshev.h
Chebyshov/src/: Chebyshev.cpp  main.cpp
Chebyshov/tests/: test.cpp
HausholderAlgorithm/: CMakeLists.txt
HausholderAlgorithm/include/: DenseMatrix.h
HausholderAlgorithm/src/: DenseMatrix.cpp  main.cpp
HausholderAlgorithm/tests/: test.cpp
MatrixOperations/: 1.py  CMakeLists.txt  CSR.cpp  CSR.h  DenseMatrix.cpp  DenseMatrix.h  main.cpp  results.csv
MixedAlgorithms/: CMakeLists.txt
MixedAlgorithms/include/: CSR.h  solvers.h
MixedAlgorithms/src/: CSR.cpp  main.cpp  solvers.cpp
MixedAlgorithms/tests/: test.cpp
SGD SOR SGS/: 1.py  CMakeLists.txt
SGD SOR SGS/include/: methods.h
SGD SOR SGS/src/: main.cpp  methods.cpp
SGD SOR SGS/tests/: test.cpp
ThomasAlgorithm/: CMakeLists.txt  README
ThomasAlgorithm/include/: Algorithm.h
ThomasAlgorithm/src/: ThomasAlgorithm.cpp
ThomasAlgorithm/tests/: test_ThomasAlgorithm.cpp
